GNOME Bugzilla – Bug 779120
vaapiencoder: miscellaneous potential bug
Last modified: 2017-02-28 17:38:10 UTC
I found something miscellaneous during my work. These don't affect current behaviour, but I guess it might cause a problem in the future.
Created attachment 346531 [details] [review] [PATCH 1/2] libs: encoder: set rate control info only when query succeed Currently, it set rate control information even when query fails. In addition, it doesn't update any more since the flag got_rate_control_mask is set to TRUE.
Created attachment 346532 [details] [review] [PATCH 2/2] libs: encoder: ensure profile when context initialization We can't be sure that encoder's profile is assgined already or not at context initialization.
Review of attachment 346531 [details] [review]: lgtm
Review of attachment 346532 [details] [review]: lgtm
commit 6468bf2ddf0463f5ec24a945ac4fad182fecac6f Author: Hyunjun Ko <zzoon@igalia.com> libs: encoder: ensure profile when context initialization commit 04a844ced08930e6f758b946f9396f573144992b Author: Hyunjun Ko <zzoon@igalia.com> libs: encoder: set rate control info only when query succeed